gcc/testsuite/gm2/iso/fail/badset3.mod
MODULE badset3 ;

TYPE
   userset = SET OF CHAR ;
VAR
   set: userset ;
BEGIN
   set := unknown {}
END badset3.
